fftools/ffmpeg_opt: try to propagate the requested output channel layout

Don't silently replace it with the default layout for the amount of channels
from the requested layout.

Should fix ticket #9869

Signed-off-by: James Almer <jamrial@gmail.com>
(cherry picked from commit f5a663f2a9d05eddbd50609b45d92d2e39b3f9ed)